--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
         </div>
       </div>
     </div>
+       background-image: url("../images/pattern.jpg");
     </body>
     <footer>
       Coded by Adrianna Bell
